--- a/adminPanel.html
+++ b/adminPanel.html
@@ -34,7 +34,7 @@
             <div class="inner-nav"> <!-- This for the horizontal nav for each vavSelection-->
                 <div class="navbar">
                     <div class="navContent welcome">
-                        <b>Welcome, Admin! "Quote"</b>
+                        <b>Welcome, Admin! “Success in management requires learning as fast as the world is changing.” – Warren Bennis</b>
                     </div>
 
                     <div class="navContent ordersNav">
